--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@sanity/client": "^6.24.1",
-    "next": "14.2.8",
+    "@sanity/vision": "^3.69.0",
+    "@vercel/speed-insights": "^1.1.0",
+    "next": "^14.2.8",
     "next-sanity": "^9.8.30",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "sanity": "^3.68.3"
   },
