--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.3.1",
     "@sanity/client": "^6.24.1",
     "@sanity/vision": "^3.69.0",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "next": "^14.2.8",
     "next-sanity": "^9.8.30",
